# RAG-Anything

./: .dockerignore  .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt  setup.py
examples/: insert_content_list_example.py  modalprocessors_example.py  raganything_example.py
raganything/: __init__.py  batch_parser.py  config.py  mineru_cloud.py  parser.py  processor.py  raganything.py
tests/: test_asset_urls.py  test_content_list_alias_handling.py
work-space/: README.md  _bootstrap.py  app.py  backfill_office_metrics.py  run_all_pruning.sh  run_bench.py  run_extract_bench.py  run_pipeline_qa_eval.py  run_postprocess_bench.py  run_pruning_bench.py  run_retrieval_bench.py
work-space/datasets/parser_benchmark/: README.md
work-space/datasets/parser_benchmark/raw_docs/: 57_Zinc-acceptability-sample-protocol_August2020.docx  nat-drug-involved-od-deaths-1999-2021.pptx
work-space/datasets/pipeline_qa/: README.md
work-space/datasets/pipeline_qa/gold_qa/: 57_Zinc-acceptability-sample-protocol_August2020.json  CT_MICA_full_body_segmentation.json  attention.json  nat-drug-involved-od-deaths-1999-2021.json
work-space/rag_core_service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
work-space/rag_core_service/app/: __init__.py  bootstrap.py  config.py  dependencies.py  errors.py  logging_config.py  main.py
work-space/rag_core_service/app/api/: routes.py
work-space/rag_core_service/app/core/: __init__.py  capabilities.py  security.py
work-space/rag_core_service/app/jobs/: __init__.py  manager.py
work-space/rag_core_service/app/schemas/: __init__.py  models.py
work-space/rag_core_service/app/services/: __init__.py  assets.py  graph.py  model_factory.py  pruning.py  rag_core.py
work-space/rag_core_service/app/storage/: __init__.py  manifests.py  paths.py
work-space/rag_core_service/config/: defaults.yaml
work-space/rag_core_service/tests/: conftest.py  test_api_smoke.py  test_assets_and_graph.py  test_processor_compat.py  test_prompt_registry.py
work-space/src/: config.py  gliner_handler.py
work-space/src/extraction/: __init__.py  metrics.py  normalizer.py
work-space/src/prompts/: __init__.py  graph_extraction.py  medical.py  pruning.py
work-space/src/pruning/: __init__.py  algorithms.py  evaluator.py  semantic_summary.py  visualizer.py
work-space/src/workbench/: __init__.py  logging_utils.py
work-space/src/workbench/demo/: __init__.py  dashboard.py
work-space/src/workbench/evaluation/: __init__.py  pipeline_qa.py  pruning.py  retrieval.py
work-space/src/workbench/experiments/: __init__.py  base.py  catalog.py  registry.py  shared.py
work-space/src/workbench/experiments/parser/: __init__.py  definitions.py  runner.py
work-space/src/workbench/experiments/pipeline/: __init__.py  definitions.py  profiles.py  runner.py
work-space/src/workbench/experiments/postprocessing/: __init__.py  definitions.py  runner.py
work-space/src/workbench/experiments/pruning/: __init__.py  definitions.py  runner.py
work-space/src/workbench/judging/: __init__.py  gemini.py  openai_eval.py  openai_pruning.py
work-space/src/workbench/metrics/: __init__.py  models.py  parser.py  pipeline.py  postprocessing.py  pruning.py  retrieval.py  storage.py
work-space/src/workbench/observability/: __init__.py  manifests.py  reports.py
work-space/src/workbench/query/: __init__.py  engine.py
work-space/src/workbench/runtime/: __init__.py  iter_ade.py  mineru_cloud.py  model_factory.py  radgraph_xl.py  reranker.py
(+3 files in other folders)
