[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-core-service"
version = "0.1.0"
description = "Standalone RAGAnything core API service for Canvus workspaces"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
  "pydantic>=2",
  "pydantic-settings>=2",
  "PyYAML>=6",
  "networkx>=3",
  "python-dotenv>=1",
  "gsk-raganything",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]


[tool.uv.sources]
gsk-raganything = { path = "../..", editable = true }
